<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/menu_events" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_suggestions"
                    android:icon="@drawable/ic_menu_feedback"
                    android:title="@string/menu_suggestions" />
                <item
                    android:id="@+id/nav_subscribe"
                    android:icon="@drawable/ic_menu_subscribe"
                    android:title="@string/menu_subscribe" />
            </group>
        </menu>
    </item>

</menu>
