<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.sg.nushigh.h1930006.anniversary.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="edu.sg.nushigh.h1930006.anniversary.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_events"
        android:name="edu.sg.nushigh.h1930006.anniversary.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_suggestions"
        android:name="edu.sg.nushigh.h1930006.anniversary.ui.suggestions.SuggestionsFragment"
        android:label="@string/menu_suggestions"
        tools:layout="@layout/fragment_suggestions" />

    <fragment
        android:id="@+id/nav_subscribe"
        android:name="edu.sg.nushigh.h1930006.anniversary.ui.subscribe.SubscribeFragment"
        android:label="@string/menu_subscribe"
        tools:layout="@layout/fragment_subscribe" />
</navigation>