<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="40dp"
        android:paddingEnd="16dp"
        android:paddingBottom="40dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/feedback_desc"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/feedback_experience"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"></RatingBar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/feedback_improve"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_suggestions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit_feedback"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white" />
</LinearLayout>